fix downloading songs